testsuite/tests/typecheck/should_fail/T12529.hs
{-# LANGUAGE TypeApplications #-}

module T12529 where

f = p @Int
