testsuite/tests/typecheck/should_fail/T12529.stderr

T12529.hs:5:5: error: [GHC-88464] Variable not in scope: p
